<resources>

    <!-- Generic Strings -->
    <string name="app_name">AndroShopping</string>
    <string name="action_settings">Settings</string>

    <!-- Splash Screen Activity Strings -->
    <string name="title_activity_splash_scree">SplashScreen</string>

    <!-- MainMenu Activity Strings -->
    <string name="activity_mainMenu_lblPerfil">Perfil</string>
    <string name="activity_mainMenu_lblComprar">Comprar</string>
    <string name="activity_mainMenu_lblPurchaseHistory">Histórico de compras</string>
    <string name="activity_mainMenu_lblExit">Salir</string>
    <string name="activity_mainMenu_lblManageProducts">Gestionar Productos</string>
    <string name="activity_mainMenu_lblManageUsers">Gestionar Usuarios</string>
    <string name="activity_mainMenu_lblSellList">Estado de ventas</string>

    <!-- Login Activity Strings -->
    <string name="activity_login_lblLoginHeader">Autenticación</string>
    <string name="activity_login_lblEmail">Correo Electrónico:</string>
    <string name="activity_login_txtEmailHint">ejemplo@dominio.com</string>
    <string name="activity_login_lblContraseña">Contraseña:</string>
    <string name="activity_login_txtContraseñaHint">Introduce tu contraseña...</string>
    <string name="activity_login_lblCheckbox">Recuerdame la próxima vez</string>
    <string name="activity_login_btnLogin">Entrar</string>
    <string name="activity_login_linkNewAccount"><a href="">No tienes cuenta? Registrate</a></string>
    <string name="errorHTTP">Error connexió WS</string>
    <string name="title_activity_register">RegisterActivity</string>


    <!-- ManageProducts Activity Strings -->
    <string name="activity_manage_products_addMenuItem">Añadir Producto</string>
    <string name="activity_manage_products_activityName">Gestionar Productos</string>
    <string name="activity_manage_products_lblTitle">Selecciona un producto:</string>
    <string name="item_manage_products_lblName">Nombre:</string>
    <string name="item_manage_products_lblTags">Tags:</string>
    <string name="item_manage_products_lblPrecio">Precio:</string>
    <string name="item_manage_products_lblTitleConfirmation">Confirmación</string>
    <string name="item_manage_products_lblBodyConfirmation">Estas seguro que deseas eliminar el producto</string>
    <string name="item_manage_products_lblYesConfirmation">Sí</string>
    <string name="item_manage_products_lblNoConfirmation">No</string>

    <!-- RegisterActivity Strings -->
    <string name="activity_register_lblTitle">Alta de usuarios nuevos</string>
    <string name="activity_register_lblPassword">Contraseña</string>
    <string name="activity_register_lblRepeatPassword">Repita la contraseña</string>
    <string name="activity_register_txtEmail">Email</string>
    <string name="activity_register_masculino">Hombre</string>
    <string name="activity_register_femenino">Mujer</string>
    <string name="activity_regiser_btnRegister">Registrarse</string>
    <string name="activity_register_txtPassword">qwerty1234</string>
    <string name="activity_register_lblGender">Género</string>

    <!-- ShowUser Activity Strings -->
    <string name="activity_showUser_title">Ver Usuario</string>
    <string name="activity_showUser_lblEmail">Email:</string>
    <string name="activity_showUser_lblGenere">Género:</string>
    <string name="activity_showUser_radioMale">Hombre</string>
    <string name="activity_showUser_radioFemale">Mujer</string>
    <string name="activity_showUser_lblAge">Edad:</string>
    <string name="activity_showUser_lblTotalAmount">Dinero total invertido:</string>

    <!-- SellList Activity -->
    <string name="activity_sell_list_activityName">Ventas</string>
    <string name="item_sell_list_lblPrice">Precio Total:</string>
    <string name="item_sell_list_lblCustomer">Cliente:</string>
    <string name="item_sell_list_lblQuantity">Cantidad:</string>
    <string name="item_sell_list_lblProduct">Producto:</string>

    <!-- ManageUsers Activity -->
    <string name="activity_manageUsers_menu_addItem">Añadir</string>
    <string name="activity_manageUsers_activityName">Gestionar Usuarios</string>
    <string name="activity_manageUsers_lblTitle">Selecciona un usuario:</string>
    <string name="item_manage_users_lblEmail">Email:</string>
    <string name="item_manage_users_lblAge">Edad:</string>
    <string name="item_manage_users_lblGenere">Género:</string>
    <string name="item_manage_users_btnDelete">Eliminar</string>
    <string name="item_manage_users_lblTitleConfirmation">Confirmación</string>
    <string name="item_manage_users_lblBodyConfirmation">Estas seguro que deseas eliminar el usuario</string>
    <string name="item_manage_users_lblYesConfirmation">Sí</string>
    <string name="item_manage_users_lblNoConfirmation">No</string>

    <!-- NewUser Activity Strings -->
    <string name="activity_new_user_activityName">Nuevo Usuario</string>

    <!-- PurchaseHistory Activity -->
    <string name="activity_purchaseHistory_activityName">Histórico</string>
    <string name="item_purchase_history_lblPrice">Precio Total:</string>
    <string name="item_purchase_history_lblQuantity">Cantidad:</string>
    <string name="item_purchase_history_lblProduct">Producto:</string>

    <!-- ProductsManager Activity -->
    <string name="title_activity_products_manager">ProductsManagerActivity</string>
    <string name="title_activity_show_product">ShowProductActivity</string>
    <string name="title_activity_manage_users">ManageUsersActivity</string>
    <string name="title_activity_user_profile">Perfil</string>
    <string name="title_activity_buy">Comprar</string>
    <string name="activity_register_txtName">Nombre</string>
    <string name="activity_register_chckTerms">Acepto las condiciones de servicio</string>
    <string name="activity_userProfile_btnModifier"><![CDATA[Modificar >]]></string>
    <string name="activity_newuser_btnCreate"><![CDATA[Crear >]]></string>

    <!-- BuyActivity Strings -->
    <string name="activity_buy_searchMenuItem">Buscar</string>
    <string name="activity_buy_buyMenuItem">Comprar</string>


    <!-- Terms and Conditions Strings -->
    <string name="termsAndConditions_lblTitle">Términos y Condiciones</string>
    <string name="termsAndConditions_lblBody">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aspernatur debitis doloribus natus neque non, possimus sint. Accusamus asperiores beatae cum, doloremque ducimus molestiae omnis quaerat qui sequi tenetur voluptatem!</string>
    <string name="termsAndConditions_lblOK">Cerrar</string>

    <!-- NewProduct Fragment3 Strings -->
    <string name="activity_newProduct_activityName">Nuevo Producto</string>
    <string name="fragment_newProduct3_repeatedTagError">Ya existe este tag!</string>
    <string name="fragment_newProduct3_emptyTagError">El nombre del tag no puede estar en blanco!</string>
    <string name="fragment_newProduct3_lblTitle">Selecciona los tags del producto:</string>
    <string name="fragment_newProduct3_txtNewTagHint">Nuevo tag...</string>
    <string name="fragment_newProduct3_btnAddTag">Insertar</string>
    <string name="item_fragment_newProduct3_lblTitleConfirmation">Confirmación</string>
    <string name="item_fragment_newProduct3_lblBodyConfirmation">Estas seguro que quieres eliminar el tag </string>

    <!-- Buy NormalFragment Strings -->
    <string name="fragment_buy_normal_lblText">Selecciona los productos a comprar:</string>

    <!-- Buy SearchFragment Strings -->
    <string name="fragment_buy_search_lblSearch">Buscar:</string>
    <string name="fragment_buy_search_txtSearchHint">Tag o nombre del producto...</string>

    <string name="error_email_message">El correo introducido no es correcto</string>
    <string name="error_rePass_empty">El campo \"Repita la Contraseña\" no puede estar vacío</string>
    <string name="error_pass_empty">El campo \"Contraseña\" no puede estar vacío</string>
    <string name="error_pass_nomatch">Los campos de contraseña no coinciden</string>
    <string name="error_gender_empty">Tienes que seleccionar un género</string>
    <string name="activity_register_spinnerDefault">Edad</string>
    <string name="error_name_empty">El campo \"Nombre\" no puede estar vacío</string>
    <string name="error_chckTerm_notChecked">Tienes que aceptar los terminos</string>
    <string name="error_ageSpinner_empty">Tienes que seleccionar una edad</string>
    <string name="error_email_repeat">El correo introducido ya existe</string>
    <string name="errorBaseDades">Error con la base de datos</string>
    <string name="error_login_fields">Los datos introducidos no son correctos.</string>
    <string name="activity_showProduct_title">INFORMACIÓN BÁSICA</string>
    <string name="activity_showProduct_nameProduct">Nombre producto</string>
    <string name="activity_showProduct_descProduct">Lorem ipsum ad his scripta blandit partiendo, eum fastidii accumsan euripidis in, eum liber hendrerit an. Qui ut wisi vocibus suscipiantur, quo dicit ridens inciderint id. Quo mundi lobortis reformidans eu, legimus senserit definiebas an eos. Eu sit tincidunt incorrupte definitionem, vis mutat affert percipit cu, eirmod consectetuer signiferumque eu per. In usu latine equidem dolores.</string>
    <string name="activity_showProduct_foto">Foto</string>
    <string name="activity_showProduct_precio">Precio:</string>
    <string name="activity_showProduct_stock">Stock:</string>
    <string name="activity_showProduct_tag">TAGS</string>
    <string name="title_activity_show_product_2">Ver producto</string>
    <string name="activity_showProduct_menu_delete">Eliminar Producto</string>
    <string name="activity_newUser_continuar"><![CDATA[Continuar >]]></string>
    <string name="activity_newUser_anterior"><![CDATA[< Anterior]]></string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_newProduct_nom">Nombre</string>
    <string name="fragment_newProduct_desc">Descripción</string>
    <string name="fragment_newProduct_foto">Foto</string>
    <string name="fragment_newProduct_selectFoto">Seleccionar foto</string>
    <string name="fragment_newProduct_precio">Precio</string>
    <string name="fragment_newProduct_stock">Stock</string>
    <string name="fragment_newProduct_chckActivo">Producto Activo</string>
    <string name="error_product_name_empty">El nombre del producto esta vacío</string>
    <string name="error_product_desc_empty">La descripción del producto esta vacía</string>
    <string name="error_product_img_empty">Tienes que seleccionar una imagen</string>
    <string name="error_product_preu_empty">Tienes que introducir un precio</string>
    <string name="error_product_preu_incorrect">El precio no es correcto</string>
    <string name="error_product_stock_empty">El Stock no puede estar vacío</string>
    <string name="error_product_stock_incorrect">El Stock no es correcto</string>
    <string name="error_pass_length">La contraseña tiene que tener mínimo 6 caracteres.</string>
    <string name="title_activity_resume_buy">ResumeBuyActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="activity_resumeBuy_btnAcceptar">Aceptar compra</string>
    <string name="activity_resumeBuy_lblTitle">Resumen de la compra</string>
    <string name="activity_resumeBuy_title">Resumen de la compra</string>


</resources>
