<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.projectes.androidshopping.activities.BuyActivity">

    <item android:id="@+id/menu_main_menu_itemPerfil" android:title="@string/activity_mainMenu_lblPerfil"
        android:orderInCategory="1" app:showAsAction="never" />
    <item android:id="@+id/menu_main_menu_itemBuy" android:title="@string/activity_mainMenu_lblComprar"
        android:orderInCategory="2" app:showAsAction="never" />
    <item android:id="@+id/menu_main_menu_itemPurchaseHistory" android:title="@string/activity_mainMenu_lblPurchaseHistory"
        android:orderInCategory="3" app:showAsAction="never" />
    <item android:id="@+id/menu_main_menu_itemExit" android:title="@string/activity_mainMenu_lblExit"
        android:orderInCategory="4" app:showAsAction="never" />
</menu>
