<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/fragment_newProduct2_lblFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:text="@string/fragment_newProduct_foto"/>

            <ImageView
                android:id="@+id/fragment_newProduct2_imgImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_below="@id/fragment_newProduct2_lblFoto"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <Button
                android:id="@+id/fragment_newProduct2_btnSelectFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_newProduct_selectFoto"
                android:layout_below="@id/fragment_newProduct2_lblFoto"
                android:layout_toRightOf="@id/fragment_newProduct2_imgImage"/>

            <TextView
                android:id="@+id/fragment_newProduct2_lblPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:text="@string/fragment_newProduct_precio"
                android:layout_below="@id/fragment_newProduct2_imgImage"/>

            <EditText
                android:id="@+id/fragment_newProduct2_txtPrecio"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_newProduct2_lblPrecio"/>

            <CheckBox
                android:id="@+id/fragment_newProduct2_chckActivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_below="@id/fragment_newProduct2_txtPrecio"
                android:text="@string/fragment_newProduct_chckActivo"/>

            <TextView
                android:id="@+id/fragment_newProduct2_lblStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:text="@string/fragment_newProduct_stock"
                android:layout_below="@id/fragment_newProduct2_chckActivo"/>

            <EditText
                android:id="@+id/fragment_newProduct2_txtStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:layout_below="@id/fragment_newProduct2_lblStock"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>